sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:9: error: type mismatch;
 found   : Unit
 required: Boolean
		if( for (j<-0 to i){
                          ^